cabal-version:       2.2
name:                cat-theory
version:             0.1.0.0
-- synopsis:
-- description:
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library 
  import: shared
  hs-source-dirs:src

executable cat-theory
  import: shared
  hs-source-dirs:      src
  main-is:             Main.hs

test-suite tests
  import: shared
  build-depends: QuickCheck
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:             Main.hs
