cabal-version:       2.2
name:                semi
version:             0.1.0.0
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  import:          shared
  exposed-modules: Semi
  hs-source-dirs:  src

test-suite tests
  import: shared
  build-depends:       hspec, QuickCheck, semi
  type: exitcode-stdio-1.0
  main-is:  Main.hs
  hs-source-dirs:  test
