cabal-version:       2.2
name:                ch3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ch3#readme
-- license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  -- ghc-options:         -Wall -fwarn-tabs
  exposed-modules:     Stuff
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite             tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && < 5,
                       hspec, QuickCheck, ch3
