cabal-version:       2.2
name:                ch3
version:             0.1.0.0
homepage:            https://github.com/githubuser/ch3#readme
maintainer:          example@example.com
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  -- ghc-options:         -Wall -fwarn-tabs
  exposed-modules:     Stuff
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite             tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && < 5,
                       hspec, QuickCheck, ch3
