cabal-version:       2.2
name:                ch7
version:             0.1.0.0
homepage:            https://github.com/githubuser/ch7#readme
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5

library 
  import:          shared
  hs-source-dirs:  src
  exposed-modules: Higher

test-suite yowtf
  import:          shared
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Main.hs
  build-depends:   hspec, QuickCheck, ch7
