cabal-version:       2.2
name:                ch8
version:             0.1.0.0
homepage:            https://github.com/githubuser/ch8#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5

library 
  import:          shared
  hs-source-dirs:  src
  exposed-modules: Dada

test-suite tests
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    hspec, QuickCheck, ch8
